adding editor pos

--- a/public/index.html
+++ b/public/index.html
@@ -78,8 +78,8 @@
 	.container {
 		width: 100vw;
 		height: 100vh;
-		display: grid;
-		grid-template-columns: 1fr 1fr;
+		/* display: grid; */
+		/* grid-template-columns: 1fr 1fr; */
 	}
 
 	input[type="text"] {
