couild be funkier

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 
 	body {
 		font-size: 14.5px;
-		background: #f9f9f9;
+		background: #215CBB;
 	}
 
 	::-webkit-scrollbar {
@@ -62,7 +62,7 @@
 
 	div.child {
 		margin: 10px;
-		border-left: 1px solid #ddd;
+		border-left: 1px solid #ffffff22;
 		max-height: 87vh;
 		overflow-y: scroll;
 		padding-left: .5em;
